fix: polito logo not visible in light mode

--- a/src/scss/sponsors.scss
+++ b/src/scss/sponsors.scss
@@ -20,6 +20,9 @@ h2 {
     font-size: var(--fs-70);
     margin-bottom: 4rem;
 }
+
+$card-padding: 1.5rem;
+
 .card {
     --x: 0;
     --y: 0;
@@ -27,11 +30,12 @@ h2 {
     
     img {
         display: block;
-        height: 7rem;
+        max-height: 7rem;
         width: auto;
+        max-width: 100%;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 2rem;
+        margin-bottom: $card-padding;
     }
 }
 
@@ -58,8 +62,8 @@ h2 {
             rotateY(calc(var(--x) * -5deg))
             rotateX(calc(var(--y) * 5deg));
         background-color: var(--bg-1);
-        border-radius: 1.5rem;
-        padding: 1.5rem;
+        border-radius: $card-padding;
+        padding: $card-padding;
         margin-top: 0;
         
         &:hover {
@@ -99,4 +103,15 @@ h2 {
         margin-top: 1em;
         text-align: justify;
     }
+}
+
+img.dark-bg {
+    background-color: var(--dark-bg-1);
+    padding: .6em;
+    border-radius: 1em;
+}
+#logo-poli {
+    border-radius: 5em;
+    padding-right: .9em;
+    // box-shadow: inset 0 0 .5em var(--accent-30);
 }
